# Minigine

./: .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md  imgui.ini  resources.rc
libs/imgui/: CMakeLists.txt  imgui_demo.cpp  imgui_impl_glfw.cpp
libs/tinyxml2/: XMLSerialization.cpp  XMLSerialization.h
libs/yaml-cpp/lib/Debug/: yaml-cppd.lib
libs/yaml-cpp/src/: scanner.cpp
src/: CMakeLists.txt  data.h
src/ApplicationFile/: ApplicationState.h  GLShader.cpp  main.cpp
src/Headers/: ApplicationState.h  Camera.h  Component.h  DisplayerManager.h  GameView.h  Light.h  LineRenderer.h  LineRenderer3D.h  Material.h  MaterialComponent.h  Mesh.h  MeshComponent.h  MiniMLDisplay.h  Object.h  Projet.h  RenderContext.h  RenderContextDisplay.h  Rtti.h  Saver.h  Scene.h  Shader.h  Subdivision.h  Transform.h  WaterComponent.h
src/Impl/: ApplicationState.cpp  Camera.cpp  Component.cpp  DisplayerManager.cpp  GLShader.cpp  Light.cpp  LineRenderer.cpp  LineRenderer3D.cpp  MaterialComponent.cpp  Mesh.cpp  MeshComponent.cpp  MiniMLDispay.cpp  MiniMLDispay.cpp.orig  Object.cpp  Projet.cpp  RenderContext.cpp  RenderContextDisplay.cpp  Saver.cpp  Scene.cpp  Subdivision.cpp  Transform.cpp  WaterComponent.cpp  main.cpp
src/Ressources/: UpperLegsR.mtl  bras.mtl  imgui.ini  legR.mtl
src/Shaders/: FragGrid.glsl  FragWireFrame.glsl  PBR.fs.glsl  PBR.vs.glsl  Waterfs.glsl  Watervs - Copie.glsl  Watervs.glsl  Watervs2.glsl  alwayse.fs.glsl  frag.glsl  vs.glsl  vsGrid.glsl
